Add comments & edit README.md file